force-app/main/default/objects/Task_Manager__c/fields/Escalation_To__c.field-meta.xml
<CustomField>
    <fullName>Escalation_To__c</fullName>
    <label>Escalation To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA_Breached</valueSetName>
    </valueSet>
</CustomField>