force-app/main/default/objects/Task_Manager__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>Follow Up</label>
    <length>200</length>
    <type>Text</type>
</CustomField>