force-app/main/default/objects/Task_Manager__c/fields/Max_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Max_Follow_up__c</fullName>
    <label>Max Follow up</label>
    <length>100</length>
    <type>Text</type>
</CustomField>