force-app/main/default/objects/Task_Manager__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assinged_to</valueSetName>
    </valueSet>
</CustomField>