force-app/main/default/objects/Task_Manager__c/fields/Second_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Second_Follow_Up__c</fullName>
    <label>Second Follow Up Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Follow_up</valueSetName>
    </valueSet>
</CustomField>