force-app/main/default/objects/Task_Manager__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Name</label>
    <type>TextArea</type>
</CustomField>